@@ -1,4 +1,4 @@
-SCTK Basic Installation for Version 2.3-rc1
+SCTK Basic Installation for Version 2.3-rc2
 ===========================================
 
 To install compile and install sctk, from the main directory
