@@ -1,6 +1,6 @@
 File:  README
-Date:  September 21, 2007
-SCTK Version: 2.3-rc1
+Date:  November 26, 2007
+SCTK Version: 2.3-rc2
 
 asclite memory usage update.
 
@@ -11,7 +11,7 @@ programs:
 	sclite   V2.3 - "Score Lite",
 	sc_stats V1.3 - sclite's Statistical Significance Comparison tool
 	rover    V0.1 - Recognition Output Voting Error Reduction
-	asclite  V1.4 - Multidimensional alignment replacement for sclite
+	asclite  V1.9 - Multidimensional alignment replacement for sclite
 
 The distribution was initially written in ANSI C on a SUN Workstation.  To
 date, The code has been successfully compiled and tested on the
@@ -37,10 +37,11 @@ Linux Version 2.2.17                          1.3 2.0B2
 Linux Version 2.4.20-20-9 **                  1.3 2.0B2 2.1.7
 Linux Version 2.6.19.fc5                      2.2.0 2.2.1 2.2.2 2.2.3 2.2.4
 Linux Version 2.6.9-5.EL (gcc 3.4.6-3)        2.2.0 2.2.1 2.2.2 2.2.3 2.2.4
-Mac Darwin 7.4.0                              1.3
-Mac Darwin 8.5.0 (gcc v4.0.1 build 5367)      2.1.2 2.1.3 2.1.4 2.1.5 2.1.6
+Darwin Version 7.4.0                          1.3
+Darwin Version 8.5.0 (gcc v4.0.1 build 5367)  2.1.2 2.1.3 2.1.4 2.1.5 2.1.6
                                               2.1.7 2.2.0 2.2.1 2.2.2 2.2.3
-                                              2.2.4 2.3-rc1
+                                              2.2.4 2.3-rc1 
+Darwin Version 8.11.0 (gcc v4.0.1 build 5367) 2.3-rc2
 
 	* compiled with warning messages, but successful self test
 	** compiled and ran, but test6, which uses GNU's diff for
